@@ -12,7 +12,7 @@ public class ResourceNotFoundException extends RuntimeException {
     private int fieldValue;
 
     public ResourceNotFoundException(String resourceName, String fieldName, int fieldValue) {
-        super(String.format("%s not found with %s : %d",resourceName, fieldName, fieldValue ));
+        super("%s not found with %s : %d".formatted(resourceName, fieldName, fieldValue));
         this.resourceName = resourceName;
         this.fieldName = fieldName;
         this.fieldValue = fieldValue;
